2011-10-31  David Edelsohn  <dje.gcc@gmail.com>

	* gcc-ar: Do not include stdio.h.

2011-10-31  Diego Novillo  <dnovillo@google.com>

	* tree-streamer-out.c (pack_ts_base_value_fields): Emit
	TYPE_ADDR_SPACE.
	* tree-streamer-in.c (unpack_ts_base_value_fields): Read
	TYPE_ADDR_SPACE.

2011-10-30  David S. Miller  <davem@davemloft.net>

	* config/sparc/sparc.c (vector_init_bshuffle): New function.
	(vector_init_fpmerge): New function.
	(sparc_expand_vector_init): Use them to improve non-const cases.

	* dwarf2out.c (dwarf2out_var_location): When processing several
	consecutive location notes, cache the result of next_real_insn().

2011-10-30  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (avx2_vec_dup<mode>): Macroize insn from
	avx2_vec_dup{v8sf,v4sf} using VF1 mode iterator.
	(vec_dupv4sf): Remove expander.
	(vec_dupv4sf): Merge from *vec_dupv4sf and *vec_dupv4sf_avx.
	(vec_dupv2df): Remove expander.
	(vec_dupv2df): Merge from *vec_dupv2df and *vec_dupv2df_sse3.
	(*vec_concatv2df): Merge *vec_concatv2df_sse3.
	(*vec_dupv4si): Merge *vec_dupv4si_avx.
	(*vec_dupv2di): Merge *vec_dupv2di_sse3.

2011-10-30  Dmitry Plotnikov  <dplotnikov@ispras.ru>

	* tree-cfg.c (verify_gimple_assign_unary): Allow vector conversions.
	* optabs.c (supportable_convert_operation): New function.
	* optabs.h (supportable_convert_operation): New prototype.
	* tree-vect-stmts.c (vectorizable_conversion): Change condition and
	behavior for NONE modifier case.
	* tree.h (VECTOR_INTEGER_TYPE_P): New macro.

2011-10-30  Jakub Jelinek  <jakub@redhat.com>

	* tree-vectorizer.h (NUM_PATTERNS): Bump to 9.
	* tree-vect-patterns.c (vect_recog_vector_vector_shift_pattern): New
	function.
	(vect_vect_recog_func_ptrs): Add it.

2011-10-30  David S. Miller  <davem@davemloft.net>

	* reorg.c (label_before_next_insn): New function.
	(relax_delay_slots): Use it instead of prev_label.
	* rtl.h (prev_label): Delete declaration.
	* emit-rtl.c (prev_label): Remove.
