@@ -1,3 +1,7 @@
+2011-10-31  Paul Brook  <paul@codesourcery.com>
+
+	* cgraphunit.c: Don't mark clones as static constructors.
+
 2011-10-31  David Edelsohn  <dje.gcc@gmail.com>
 
 	* gcc-ar: Do not include stdio.h.
